Populate id-mapper with data dump

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -246,6 +246,8 @@ services:
     ports:
       - 7474:7474
       - 7687:7687
+    volumes:
+      - "./id-mapper-dump:/dump"
     environment:
       - NEO4J_AUTH=neo4j/1
 
