--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /id-mapper/
 /map-storage/
 /metabolic-ninja/
-/model/
+/simulations/
 /model-storage/
 /warehouse/
 /modeling-base/cplex_128.tar.gz
