--- a/modeling-base/Dockerfile
+++ b/modeling-base/Dockerfile
@@ -1,35 +1,29 @@
-FROM python:3.6-slim
+FROM dddecaf/wsgi-base:debian
 
-ENV PYTHONUNBUFFERED=1
+# The sympy cache causes significant memory leaks as it is currently used by
+# optlang. Disable it by default.
+ENV SYMPY_USE_CACHE=no
 
-ARG CWD=/opt
-ARG REPO_URL
-ARG GITHUB_TOKEN
+# CPLEX is provided externally; see the README
 ARG CPLEX="cplex_128.tar.gz"
 
-RUN set -eux \
-    && apt-get update \
-    && apt-get install --yes --only-upgrade openssl ca-certificates \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+# Work in the /opt directory to persist the pip-compiled requirement list for
+# child images to use.
+WORKDIR /opt
 
-WORKDIR "${CWD}"
-
-COPY requirements.in ./
-
-RUN set -eux \
-    && pip install --upgrade pip setuptools wheel pip-tools \
-    && pip-compile --generate-hashes \
-        --output-file requirements.txt requirements.in \
-    && pip-sync requirements.txt \
-    && rm -rf /root/.cache \
-    && rm -rf /tmp/* /var/tmp/*
-
-# Install CPLEX afterwards when pip was already upgraded.
-
+COPY modeling-requirements.in ./
 COPY cplex_128.tar.gz ./
 
 RUN set -eux \
-    && tar -xzf "${CPLEX}" \
+    # Install CPLEX first from the external source.
     && pip --no-cache-dir install cplex_128/python/3.6/x86-64_linux \
-    && rm -rf cplex_128*
+    && rm -rf cplex_128* \
+    # Compile all the modeling requirements. Note that `pip-compile` will use
+    # the local installation of cplex.
+    && pip-compile --generate-hashes \
+        --output-file modeling-requirements.txt modeling-requirements.in \
+    # Pre-install the compiled requirements to save some build time for child
+    # images.
+    && pip-sync modeling-requirements.txt \
+    # Delete the pip cache to minimize image size.
+    && rm -rf /root/.cache
