fix: add allowed_origins key

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,7 @@ services:
     - "./metabolic-ninja:/app"
     environment:
     - ENVIRONMENT=development
+    - ALLOWED_ORIGINS=*
     - SENTRY_DSN=
     - RABBITMQ_HOST=rabbitmq
     - POSTGRES_HOST=postgres
