--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "8001:8000"
     volumes:
-      - "./iam:/app"
+      - iamdata:/app/keys
       - type: tmpfs
         target: "/prometheus-client"
     depends_on:
@@ -47,8 +47,6 @@ services:
       - iam
     ports:
       - "8002:8000"
-    volumes:
-      - "./map-storage:/app"
     environment:
       - ENVIRONMENT=development
       - FLASK_APP=src/map_storage/wsgi.py
@@ -71,8 +69,6 @@ services:
     - rabbitmq
     ports:
     - "8003:8000"
-    volumes:
-    - "./metabolic-ninja:/app"
     environment:
     - ENVIRONMENT=development
     - FLASK_APP=src/metabolic_ninja/wsgi.py
@@ -95,8 +91,6 @@ services:
     depends_on:
     - rabbitmq
     - iam
-    volumes:
-    - "./metabolic-ninja:/app"
     environment:
     - ENVIRONMENT=development
     - FLASK_APP=src/metabolic_ninja/wsgi.py
@@ -134,7 +128,6 @@ services:
       - ICE_PASSWORD=
       - prometheus_multiproc_dir=/prometheus-client
     volumes:
-      - ./simulations:/app
       - type: tmpfs
         target: "/prometheus-client"
     restart: always
@@ -146,8 +139,6 @@ services:
       - iam
     ports:
       - "8005:8000"
-    volumes:
-      - "./model-storage:/app"
     environment:
       - ENVIRONMENT=development
       - FLASK_APP=src/model_storage/wsgi.py
@@ -169,8 +160,6 @@ services:
       - iam
     ports:
       - "8006:8000"
-    volumes:
-      - "./warehouse:/app"
     environment:
       - ENVIRONMENT=development
       - SCRIPT_NAME=
@@ -194,8 +183,6 @@ services:
        - iam
     ports:
       - "8007:8000"
-    volumes:
-      - "./design-storage:/app"
     environment:
       - ENVIRONMENT=development
       - FLASK_APP=src/design_storage/wsgi.py
@@ -216,8 +203,6 @@ services:
       - "8008:8000"
     depends_on:
       - neo4j
-    volumes:
-      - "./id-mapper:/app"
     environment:
       - ENVIRONMENT=development
       - FLASK_APP=src/id_mapper/wsgi.py
@@ -234,8 +219,6 @@ services:
     image: gcr.io/dd-decaf-cfbf6/metanetx:${METANETX_TAG}
     ports:
       - "8009:8000"
-    volumes:
-      - "./metanetx:/app"
     environment:
       - ENVIRONMENT=development
       - FLASK_APP=src/metanetx/wsgi.py
@@ -272,5 +255,6 @@ services:
       - "6379:6379"
 
 volumes:
+  iamdata:
   pgdata:
   neodata:
