--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 os:
 - linux
-- osx
 language: shell
 
 git:
@@ -19,6 +18,8 @@ services:
 
 before_install:
 - make check
+
+install:
 
 script:
 - date -u +%Y-%m-%dT%T+00:00
