--- a/.travis.yml
+++ b/.travis.yml
@@ -8,21 +8,19 @@ git:
 branches:
   only:
   - master
-  - add-ci
 
 services:
 - docker
 
-  #env:
-  #  global:
-
 before_install:
 - make check
+- make setup
 
 install:
+- make install
 
 script:
-- date -u +%Y-%m-%dT%T+00:00
+- make initialize
 
 notifications:
   email: false
