--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Check for the availability of all required command line tools.
       run: make check
+      continue-on-error: true
     - name: Download all dependent repositories.
       run: make setup
     - name: Build all local Docker images.
