--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,25 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Check for the availability of all required command line tools.
+      id: check
       run: make check
+    - name: Print versions of important tools.
+      run:
+        - bash --version
+        - git --version
+        - make --version
+        - docker version
+        - docker-compose version
+      if: ${{ steps.check.outcome == "failure" || steps.check.outcome == "success" }}
     - name: Download all dependent repositories.
+      id: setup
       run: make setup -j -O
-      if: ${{ failure() || success() }}
+      if: ${{ steps.check.outcome == "failure" || steps.check.outcome == "success" }}
     - name: Build all local Docker images.
+      id: install
       run: make install -j -O
-      if: ${{ failure() || success() }}
+      if: ${{ steps.setup.outcome == "success" }}
     - name: Initialize databases.
+      id: initialize
       run: make initialize -j -O
-      if: ${{ failure() || success() }}
+      if: ${{ steps.install.outcome == "success" }}
