chore: remove superfluous expression

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,12 +33,13 @@ jobs:
     - name: Download all dependent repositories.
       id: setup
       run: make setup
-      if: ${{ steps.check.outcome == 'failure' || steps.check.outcome == 'success' }}
+      if: steps.check.outcome == 'failure' || steps.check.outcome == 'success'
     - name: Build all local Docker images.
       id: install
       run: make install -j -O
-      if: ${{ steps.setup.outcome == 'success' }}
+      if: steps.setup.outcome == 'success'
     - name: Initialize databases.
       id: initialize
       run: make initialize
-      if: ${{ steps.install.outcome == 'success' }}
+      if: steps.install.outcome == 'success'
+
